[metadata]
author = Dissect Team
author_email = dissect@fox-it.com
url = https://github.com/fox-it/dissect.volume
license = Affero General Public License v3
description = A Dissect module implementing a parser for different disk volume and partition systems, for example LVM2, GPT and MBR
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE, COPYRIGHT
classifiers =
  Programming Language :: Python :: 3

[options]
python_requires = ~=3.9
